--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bson": "^5.0.0",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
